--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "@yourusername/ai-hrms",
+  "version": "1.0.1",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
     "eslint": "^9.27.0",
