chore: add ESLint and Prettier setup with lint-staged and husky
- Added ESLint and Prettier as dev dependencies
- Configured .eslintignore and .prettierignore for common folders
- Integrated lint-staged and husky for pre-commit code quality checks
- Updated package.json with scripts and configuration

--- a/package.json
+++ b/package.json
@@ -26,5 +26,18 @@
     "*.{json,md,html,css}": [
       "prettier --write"
     ]
-  }
+  },
+  "keywords": [
+    "ai",
+    "hrms",
+    "human-resources",
+    "mern",
+    "react",
+    "nodejs",
+    "express",
+    "mongodb",
+    "eslint",
+    "prettier",
+    "automation"
+  ]
 }
