--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "prepare": "husky",
-    "test": "echo \"Root: No tests\""
+    "test": "echo \"Root: No tests\"",
+    "build": "next build"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -39,5 +40,10 @@
     "eslint",
     "prettier",
     "automation"
-  ]
+  ],
+  "dependencies": {
+    "next": "^15.1.8",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  }
 }
