Update and upgrade features, add admin login functionality, prepare for Vercel deployment

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,8 +1,8 @@
 # MongoDB Connection
-MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/hrpbloom
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/aihrms
 
 # JWT Secret
-JWTSECRET=your_jwt_secret_key_here_make_it_long_and_secure
+JWT_SECRET=your_jwt_secret_key
 JWT_EXPIRES_IN=7d
 
 # Google Gemini API
@@ -22,10 +22,7 @@ CLOUDINARY_API_SECRET=your_api_secret
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-CLIENT_URL=https://www.hrpbloom.com
+CLIENT_URL=http://localhost:5173
 
 # Security
 BCRYPT_SALT_ROUNDS=10
-
-# Admin Master Password (for initial setup)
-ADMIN_MASTER_PASSWORD=Admin@HRPBloom2024!
