--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yourusername/ai-hrms",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
@@ -12,12 +12,17 @@
     "globals": "^16.1.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "vite": "^5.0.10"
   },
   "scripts": {
-    "prepare": "husky",
-    "test": "echo \"Root: No tests\"",
-    "build": "next build"
+    "dev": "vite --host",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
+    "client": "cd ai-hrms/client && npm run dev",
+    "server": "cd ai-hrms/server && npm run dev",
+    "start": "concurrently \"npm run client\" \"npm run server\""
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -29,19 +34,18 @@
     ]
   },
   "keywords": [
-    "ai",
-    "hrms",
-    "human-resources",
-    "mern",
-    "react",
-    "nodejs",
-    "express",
-    "mongodb",
-    "eslint",
-    "prettier",
-    "automation"
+    "HRMS",
+    "AI",
+    "MERN",
+    "Human Resources",
+    "Payroll",
+    "Attendance",
+    "Vite",
+    "React",
+    "Tailwind"
   ],
   "dependencies": {
+    "concurrently": "^8.2.2",
     "next": "^15.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
