--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "@yourusername/ai-hrms",
   "version": "1.0.2",
+  "type": "commonjs",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.9",
+    "@babel/preset-env": "^7.24.9",
+    "@babel/preset-react": "^7.24.9",
     "@eslint/js": "^9.27.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^6.10.0",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
@@ -13,17 +19,23 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.0.0",
     "prettier": "^3.5.3",
-    "vite": "^5.0.10"
+    "style-loader": "^3.3.4",
+    "vite": "^5.0.10",
+    "webpack": "^5.99.9",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "dev": "vite --host",
-    "build": "vite build",
+    "build": "webpack --mode production",
+    "build:vite": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "client": "cd ai-hrms/client && npm run dev",
     "server": "cd ai-hrms/server && npm run dev",
     "start": "concurrently \"npm run client\" \"npm run server\"",
-    "setup": "cd ai-hrms/client && npm install && cd ../server && npm install"
+    "setup": "cd ai-hrms/client && npm install && cd ../server && npm install",
+    "webpack": "webpack --config webpack.config.js",
+    "fix-imports": "./fix-imports.sh"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
