Fix import issues and simplify project structure

--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,11 @@
   "version": 2,
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": "vite",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ],
   "env": {
-    "MONGODB_URI": "mongodb+srv://admin:<db_password>@cluster0.rflorco.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
-    "JWTSECRET": "your_jwt_secret_key_here_make_it_long_and_secure",
-    "CLIENT_URL": "https://hrpbloom.com",
-    "ADMIN_MASTER_PASSWORD": "Admin@HRPBloom2024!"
+    "MONGODB_URI": "mongodb+srv://admin:<db_password>@cluster0.rflorco.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
   }
 }
