--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "cd server && npm start",
-    "start": "npm run build && npm run server"
+    "server": "cd server && node index.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
@@ -30,8 +29,6 @@
     "@babel/core": "^7.24.9",
     "@babel/preset-env": "^7.24.9",
     "@babel/preset-react": "^7.24.9",
-    "@types/react": "^18.2.14",
-    "@types/react-dom": "^18.2.6",
     "@vitejs/plugin-react": "^4.0.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.3",
@@ -39,8 +36,6 @@
     "postcss": "^8.4.25",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.3.2",
-    "vite": "^4.4.0",
-    "webpack": "^5.99.9",
-    "webpack-cli": "^5.1.4"
+    "vite": "^4.4.0"
   }
 }
