--- a/.env.local
+++ b/.env.local
@@ -29,3 +29,12 @@ BCRYPT_SALT_ROUNDS=10
 
 # Admin Master Password (for initial setup)
 ADMIN_MASTER_PASSWORD=Admin@HRPBloom2024!
+
+# OAuth Credentials
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+MICROSOFT_CLIENT_ID=your_microsoft_client_id
+MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
+FACEBOOK_APP_ID=your_facebook_app_id
+FACEBOOK_APP_SECRET=your_facebook_app_secret
+OAUTH_CALLBACK_URL=https://www.hrpbloom.com/auth/callback
