--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
-    "@reduxjs/toolkit": "^2.2.1",
-    "axios": "^1.6.7",
-    "chart.js": "^4.4.1",
-    "date-fns": "^3.3.1",
-    "next": "^14.1.0",
-    "react": "^19.0.0",
+    "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.6.2",
+    "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
-    "react-markdown": "^9.0.1",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.1",
+    "react-icons": "^4.12.0",
+    "react-markdown": "^8.0.7",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.20.0",
     "typeface-poppins": "^1.1.13",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vite": "^5.1.3"
+    "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5",
+    "vite": "^5.0.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
