--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hrpbloom",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,30 +9,45 @@
     "server": "cd server && node index.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
-    "@reduxjs/toolkit": "^2.0.1",
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
-    "date-fns": "^2.30.0",
-    "next": "^13.5.6",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0",
-    "react-markdown": "^8.0.7",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0",
+    "@fortawesome/fontawesome-free": "^6.8.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^2.1.0",
+    "chart.js": "^5.3.0",
+    "date-fns": "^3.6.0",
+    "next": "^14.5.0",
+    "react": "^18.3.0",
+    "react-chartjs-2": "^6.0.0",
+    "react-dom": "^18.3.0",
+    "react-hot-toast": "^3.1.0",
+    "react-icons": "^5.2.0",
+    "react-markdown": "^9.0.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.0.0",
     "typeface-poppins": "^1.1.13",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.19.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0",
-    "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "@vitejs/plugin-react": "^5.0.0",
+    "autoprefixer": "^10.6.0",
+    "postcss": "^9.0.0",
+    "tailwindcss": "^4.0.0",
+    "vite": "^6.0.0",
+    "webpack": "^6.0.0",
+    "webpack-cli": "^6.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
