--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hrpbloom-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -8,16 +8,29 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "google-auth-library": "^9.4.1",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.3.1",
-    "node-fetch": "^3.3.2"
+    "bcrypt": "^6.0.0",
+    "cors": "^3.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.0.0",
+    "google-auth-library": "^10.0.0",
+    "jsonwebtoken": "^10.0.0",
+    "mongoose": "^8.2.0",
+    "node-fetch": "^4.0.0",
+    "socket.io": "^5.0.0",
+    "zod": "^3.22.0",
+    "helmet": "^7.1.0",
+    "compression": "^2.0.0",
+    "express-rate-limit": "^7.1.0",
+    "multer": "^2.0.0",
+    "sharp": "^0.33.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.0",
+    "jest": "^30.0.0",
+    "supertest": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
