--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,20 @@ jobs:
       with:
         name: build-files
         path: dist/
+
+  deploy:
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Download build artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: build-files
+        path: dist
+
+    - name: Deploy to production
+      run: echo "Deployment would happen here"
+      # In a real scenario, you would add deployment steps here
+      # For example, deploying to Vercel, AWS, or another hosting service
