Update project structure with modern directory organization and dependencies

--- a/.env.local
+++ b/.env.local
@@ -1,40 +1,12 @@
-# MongoDB Connection
-MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/hrpbloom
+# Local Environment Variables (Not committed to Git)
+VITE_API_URL=http://localhost:5000/api
 
-# JWT Secret
-JWTSECRET=your_jwt_secret_key_here_make_it_long_and_secure
-JWT_EXPIRES_IN=7d
+# Feature Flags
+VITE_FEATURE_AI_ASSISTANT=true
+VITE_FEATURE_QR_ATTENDANCE=true
+VITE_FEATURE_AI_LEAVE_MANAGEMENT=true
+VITE_FEATURE_ANALYTICS=true
+VITE_MALAYSIAN_HR_ASSISTANT_ENABLED=true
 
-# Google Gemini API
-GEMINI_API_KEY=your_gemini_api_key
-
-# Email Configuration
-EMAIL_SERVICE=gmail
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password
-EMAIL_FROM=your_email@gmail.com
-
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
-
-# Server Configuration
-PORT=5000
-NODE_ENV=development
-CLIENT_URL=https://www.hrpbloom.com
-
-# Security
-BCRYPT_SALT_ROUNDS=10
-
-# Admin Master Password (for initial setup)
-ADMIN_MASTER_PASSWORD=Admin@HRPBloom2024!
-
-# OAuth Credentials
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-MICROSOFT_CLIENT_ID=your_microsoft_client_id
-MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
-FACEBOOK_APP_ID=your_facebook_app_id
-FACEBOOK_APP_SECRET=your_facebook_app_secret
-OAUTH_CALLBACK_URL=https://www.hrpbloom.com/auth/callback
+# Development Settings
+VITE_DEBUG=true
