--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "test": "NODE_ENV=test vitest run",
+    "test:watch": "NODE_ENV=test vitest",
+    "test:coverage": "NODE_ENV=test vitest run --coverage",
+    "lint": "eslint . --ext js --report-unused-disable-directives --max-warnings 0",
+    "format": "prettier --write \"**/*.js\""
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -14,20 +18,25 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.4.1",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.2",
+    "winston": "^3.11.0",
     "zod": "^3.22.4",
-    "helmet": "^7.1.0",
     "compression": "^1.7.4",
     "express-rate-limit": "^7.1.5",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
-    "winston": "^3.11.0"
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "eslint": "^8.54.0",
+    "eslint-config-prettier": "^9.0.0",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.0",
+    "supertest": "^6.3.3",
+    "vitest": "^0.34.6"
   },
   "engines": {
     "node": ">=18.0.0"
