--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@fortawesome/fontawesome-free": "6.7.2",
     "@headlessui/react": "2.2.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
