Update environment variables to use Vite's import.meta.env

--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,15 @@
 # Development Environment Variables
-NODE_ENV=development
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/hrpbloom_dev
-JWTSECRET=hrpbloom_dev_jwt_secret_key
-JWT_EXPIRES_IN=30d
+VITE_SERVER_PORT=5000
+VITE_MONGODB_URI=mongodb://localhost:27017/hrpbloom_dev
+VITE_JWTSECRET=hrpbloom_dev_jwt_secret_key
+VITE_JWT_EXPIRES_IN=30d
 
 # Client URL for CORS and redirects
-CLIENT_URL=http://localhost:3000
+VITE_CLIENT_URL=http://localhost:3000
+
+# API URL
+VITE_API_URL=http://localhost:5000/api
 
 # Debug Settings
-DEBUG=hrpbloom:*
-LOG_LEVEL=debug
+VITE_DEBUG=true
+VITE_LOG_LEVEL=debug
