--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,25 @@
 # Server Environment Variables
-NODE_ENV=development
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/hrpbloom
-JWTSECRET=your_jwt_secret_key
-JWT_EXPIRES_IN=7d
+VITE_SERVER_PORT=5000
+VITE_MONGODB_URI=mongodb://localhost:27017/hrpbloom
+VITE_JWTSECRET=your_jwt_secret_key
+VITE_JWT_EXPIRES_IN=7d
 
 # Client URL for CORS and redirects
-CLIENT_URL=http://localhost:3000
+VITE_CLIENT_URL=http://localhost:3000
 
-# OAuth Credentials
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-MICROSOFT_CLIENT_ID=your_microsoft_client_id
-MICROSOFT_CLIENT_SECRET=your_microsoft_client_secret
-FACEBOOK_APP_ID=your_facebook_app_id
-FACEBOOK_APP_SECRET=your_facebook_app_secret
+# API URL
+VITE_API_URL=http://localhost:5000/api
+
+# Feature Flags
+VITE_FEATURE_AI_ASSISTANT=true
+VITE_FEATURE_QR_ATTENDANCE=true
+VITE_FEATURE_AI_LEAVE_MANAGEMENT=true
+VITE_FEATURE_ANALYTICS=true
+VITE_MALAYSIAN_HR_ASSISTANT_ENABLED=true
 
 # Email Configuration
-EMAIL_SERVICE=smtp
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_USER=your_email@example.com
-EMAIL_PASSWORD=your_email_password
-EMAIL_FROM=noreply@hrpbloom.com
-
-# API Keys
-OPENAI_API_KEY=your_openai_api_key
-
-# Malaysian HR Assistant Configuration
-MALAYSIAN_HR_API_ENDPOINT=https://api.example.com/malaysian-hr
-MALAYSIAN_HR_API_KEY=your_malaysian_hr_api_key
+VITE_EMAIL_FROM=your_email@example.com
 
 # File Storage
-UPLOAD_DIR=uploads
-MAX_FILE_SIZE=5242880 # 5MB
-
-# Security
-BCRYPT_SALT_ROUNDS=12
-RATE_LIMIT_WINDOW_MS=900000 # 15 minutes
-RATE_LIMIT_MAX=100 # 100 requests per window
+VITE_UPLOAD_DIR=uploads
+VITE_MAX_FILE_SIZE=5242880
