--- a/.env.production
+++ b/.env.production
@@ -1,13 +1,15 @@
 # Production Environment Variables
-NODE_ENV=production
-PORT=5000
-MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/hrpbloom_prod?retryWrites=true&w=majority
-JWTSECRET=hrpbloom_prod_jwt_secret_key_2025
-JWT_EXPIRES_IN=7d
+VITE_SERVER_PORT=5000
+VITE_MONGODB_URI=mongodb+srv://username:password@cluster0.mongodb.net/hrpbloom_prod?retryWrites=true&w=majority
+VITE_JWTSECRET=hrpbloom_prod_jwt_secret_key_2025
+VITE_JWT_EXPIRES_IN=7d
 
 # Client URL for CORS and redirects
-CLIENT_URL=https://hrpbloom.com
+VITE_CLIENT_URL=https://hrpbloom.com
+
+# API URL
+VITE_API_URL=https://api.hrpbloom.com/api
 
 # Security Settings
-RATE_LIMIT_WINDOW_MS=900000 # 15 minutes
-RATE_LIMIT_MAX=50 # 50 requests per window
+VITE_RATE_LIMIT_WINDOW_MS=900000
+VITE_RATE_LIMIT_MAX=50
