--- a/.env.test
+++ b/.env.test
@@ -1,14 +1,16 @@
 # Test Environment Variables
-NODE_ENV=test
-PORT=5001
-MONGODB_URI=mongodb://localhost:27017/hrpbloom_test
-JWTSECRET=hrpbloom_test_jwt_secret_key
-JWT_EXPIRES_IN=1d
+VITE_SERVER_PORT=5001
+VITE_MONGODB_URI=mongodb://localhost:27017/hrpbloom_test
+VITE_JWTSECRET=hrpbloom_test_jwt_secret_key
+VITE_JWT_EXPIRES_IN=1d
 
 # Client URL for CORS and redirects
-CLIENT_URL=http://localhost:3000
+VITE_CLIENT_URL=http://localhost:3000
+
+# API URL
+VITE_API_URL=http://localhost:5001/api
 
 # Test Settings
-SKIP_AUTH=true
-TEST_USER_EMAIL=test@hrpbloom.com
-TEST_USER_PASSWORD=Test@123
+VITE_SKIP_AUTH=true
+VITE_TEST_USER_EMAIL=test@hrpbloom.com
+VITE_TEST_USER_PASSWORD=Test@123
