--- a/package.json
+++ b/package.json
@@ -1,73 +1,51 @@
 {
   "name": "hrpbloom",
-  "version": "3.0.0",
+  "version": "3.1.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "cd server && node index.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "test": "vitest run",
-    "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "preview": "vite preview",
+    "server": "cd server && npm run dev",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "6.7.2",
-    "@headlessui/react": "2.2.4",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
-    "date-fns": "^2.30.0",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.12.0",
-    "react-markdown": "^8.0.7",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^6.20.0",
-    "typeface-poppins": "^1.1.13",
-    "xlsx": "^0.18.5"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0",
+    "typeface-poppins": "^1.1.13"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/user-event": "^14.5.1",
-    "@vitejs/plugin-react": "^4.2.0",
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.31",
-    "postcss-import": "^15.1.0",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.5",
-    "vite": "^5.0.0",
-    "vitest": "^0.34.6"
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vite": "^5.0.8"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/wawa2111/aihrms.git"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
