--- a/server/package.json
+++ b/server/package.json
@@ -14,29 +14,31 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
+    "express-rate-limit": "^7.1.5",
     "google-auth-library": "^9.4.1",
-    "helmet": "^7.1.0",
+    "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
+    "mongoose": "^8.15.1",
+    "multer": "^1.4.5-lts.2",
     "node-fetch": "^3.3.2",
+    "sharp": "^0.33.5",
     "socket.io": "^4.7.2",
     "winston": "^3.11.0",
-    "zod": "^3.22.4",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
-    "sharp": "^0.33.1"
+    "zod": "^3.25.46"
   },
   "devDependencies": {
-    "eslint": "^8.54.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.0.0",
+    "jsdom": "^26.1.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.0",
     "supertest": "^6.3.3",
-    "vitest": "^0.34.6"
+    "vitest": "^3.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
